--- a/css/main.css
+++ b/css/main.css
@@ -134,174 +134,146 @@ h1, h2, h3, p {
   border-bottom: 1px solid #ECECEC;
 }
 
-@media screen and (min-width: 340px) {
-  .main-div {
-    position: relative;
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -ms-flex-pack: distribute;
+/*@media screen and (min-width: 340px) {
+    .main-div {  
+        position: relative; 
+        display: inline-flex;
+        align-items: center;
         justify-content: space-around;
-    width: 100%;
-  }
-  .site-nav {
-    display: block;
-    margin-bottom: 300px;
-    text-align: start;
-  }
-  .site-nav__item:not(:last-child) {
-    margin-bottom: 32px;
-  }
-  .site-nav__link {
-    color: var(--primary-text-color);
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 40px;
-    line-height: 1.175;
-    letter-spacing: 0.02em;
-    text-decoration: none;
-    -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        width: 100%;
+    }
+
+    .site-nav  {
+        display: block; 
+        margin-bottom: 300px; 
+       text-align: start;
+       
+       &__item:not(:last-child) {
+        margin-bottom: 32px;
+    }
+        &__link {
+            color: var(--primary-text-color);
+            font-family: inherit;  
+            font-weight: 500;
+            font-size: 40px;
+            line-height: 1.175;
+            letter-spacing: 0.02em;
+            text-decoration: none;         
+
             transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    -webkit-transition-duration: 250ms;
             transition-duration: 250ms;
-  }
-  .site-nav__link--current {
-    color: var(--accent-text);
-  }
-  .site-list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin-bottom: 65px;
-    text-align: start;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
-  }
-  .site-list__item:not(:last-child) {
-    margin-top: 32px;
-  }
-  .site-list__link-mail {
-    color: var(--primary-text-color);
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 40px;
-    line-height: 1.175;
-    letter-spacing: 0.02em;
-    text-decoration: none;
-    -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    -webkit-transition-duration: 250ms;
-            transition-duration: 250ms;
-  }
-  .site-list__link-tell {
-    color: var(--accent-text);
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 34px;
-    line-height: 1.175;
-    letter-spacing: 0.02em;
-    text-decoration: none;
-    -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    -webkit-transition-duration: 250ms;
-            transition-duration: 250ms;
-  }
-  .site-list__icon {
-    display: none;
-  }
-  .site-social {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-  .site-social__item {
-    padding-right: 10px;
-    padding-left: 10px;
-    border-right: 1px solid rgba(33, 33, 33, 0.2);
-  }
-  .site-social__item:last-child {
-    padding-right: 0;
-  }
-  .site-social .site-social__link {
-    color: #2196F3;
-    font-size: 18px;
-    font-weight: 500;
-    line-height: 1.22;
-    letter-spacing: 0.02em;
-    text-align: left;
-  }
-  .header-menu__btn {
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
-    cursor: pointer;
-    margin: 0;
-    padding: 0;
-    border: none;
-    background-color: transparent;
-    z-index: 2;
-  }
+        }
+         &__link--current {
+            color: var(--accent-text);
+        }
 }
+    .site-list  {
+        display: flex;
+        margin-bottom: 65px;
+        text-align: start;
+        flex-direction: column-reverse;
 
-@media screen and (min-width: 340px) and (min-width: 768px) {
-  .header-menu__btn {
-    display: none;
-  }
-}
+        &__item:not(:last-child) {
+            margin-top: 32px;         
+        }
+            &__link-mail {
+                color: var(--primary-text-color);
+                font-family: inherit;  
+                font-weight: 500;
+                font-size: 40px;
+                line-height: 1.175;
+                letter-spacing: 0.02em;
+                text-decoration: none;         
+    
+                transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+                transition-duration: 250ms;
+            }
+            &__link-tell {
+                color: var(--accent-text);
+                font-family: inherit;  
+                font-weight: 500;
+                font-size: 34px;
+                line-height: 1.175;
+                letter-spacing: 0.02em;
+                text-decoration: none;
 
-@media screen and (min-width: 340px) {
-  .header-menu__icon-cross {
-    display: none;
-  }
-  .header-menu__btn.is-open .header-menu__icon-cross {
-    display: block;
-    z-index: 2;
-  }
-  .header-menu__btn.is-open .header-menu__icon-menu {
-    display: none;
-  }
-  .header-menu__btn:hover,
-  .header-menu__btn:focus {
-    fill: var(--accent-text);
-  }
-  .header-menu {
-    background-color: #ffff;
-    padding: 48px 40px;
-    text-align: center;
-    font-size: 20px;
-    z-index: 1;
-  }
-}
+                transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+                transition-duration: 250ms;
+            }                                      
+            &__icon {
+                display: none;
+            }
+    }
+    .site-social {
+        display: flex;
 
-@media screen and (min-width: 340px) and (max-width: 767px) {
-  .header-menu {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-  }
-}
+        &__item {
+            padding-right: 10px;
+            padding-left: 10px;
+            border-right: 1px solid rgba(33, 33, 33, 0.2);
+        }
+        &__item:last-child {
+            padding-right: 0;            
+        }
+        .site-social__link {
+            color: #2196F3;
+            font-size: 18px;
+            font-weight: 500;
+            line-height: 1.22;
+            letter-spacing: 0.02em;
+            text-align: left;
+        }
+        
+    }
+    .header-menu__btn {        
+        display: inline-flex;
+        cursor: pointer;     
+        margin: 0;
+        padding: 0;
+        border: none;
+        background-color: transparent; 
+        z-index: 2; 
 
-@media screen and (min-width: 340px) {
-  .header-menu.is-open {
-    display: block;
-    top: 0%;
-    left: 0%;
-  }
-}
-
+        @media screen and (min-width: 768px) {
+            display: none;
+        }
+        
+    }
+    .header-menu__icon-cross {
+        display: none;
+    }
+    .header-menu__btn.is-open .header-menu__icon-cross {
+        display: block;
+        z-index: 2;
+    } 
+    .header-menu__btn.is-open .header-menu__icon-menu {
+        display: none;
+    }
+    .header-menu__btn:hover,
+    .header-menu__btn:focus {
+        fill: var(--accent-text)
+    }
+    .header-menu {               
+        background-color: #ffff;
+        padding: 48px 40px;
+        text-align: center;
+        font-size: 20px;      
+    }  
+ @media screen and (max-width: 767px) {    
+            display: none;                     
+  
+    }
+    .header-menu.is-open {
+        display: block;
+        top: 0%; 
+        left: 0%;    
+       }
+}*/
 @media screen and (min-width: 480px) {
   .main-div {
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
     display: inline-flex;
-    position: relative;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -434,17 +406,15 @@ h1, h2, h3, p {
   .header-menu {
     text-align: center;
     font-size: 20px;
-    z-index: 1;
     display: none;
-    position: absolute;
+    padding: 48px 40px;
     top: 0;
     left: 0;
-    width: 100%;
   }
   .header-menu.is-open {
     display: block;
-    top: 0%;
-    left: 0%;
+    top: 100%;
+    left: 100%;
   }
 }
 
@@ -762,9 +732,10 @@ h1, h2, h3, p {
 
 .logo {
   display: inline-block;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  opacity: 1;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   padding-top: 25px;
   padding-bottom: 25px;
   color: var(--accent-text);
