--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -3,7 +3,7 @@
 .page-header {
     border-bottom: 1px solid #ECECEC ;
 }
-@media screen and (min-width: 340px) {
+/*@media screen and (min-width: 340px) {
     .main-div {  
         position: relative; 
         display: inline-flex;
@@ -126,30 +126,25 @@
         background-color: #ffff;
         padding: 48px 40px;
         text-align: center;
-        font-size: 20px;
-        z-index: 1;
-       
- @media screen and (max-width: 767px) {
-            display: none;
-            position: absolute;         
-            top: 0;
-            left: 0;
-            width: 100%;
-        
-      }
+        font-size: 20px;      
+    }  
+ @media screen and (max-width: 767px) {    
+            display: none;                     
+  
     }
     .header-menu.is-open {
         display: block;
         top: 0%; 
         left: 0%;    
        }
-}
+}*/
 
 @media screen and (min-width: 480px) {
+    
 
     .main-div {       
         display: inline-flex;
-        position: relative;  
+        
         align-items: center;
         justify-content: space-around;
         width: 100%;
@@ -234,10 +229,9 @@
             line-height: 1.22;
             letter-spacing: 0.02em;
             text-align: left;
-        }
-        
+        }        
     }
-    .header-menu__btn {        
+    .header-menu__btn {              
         display: inline-flex;
         cursor: pointer;     
         margin: 0;
@@ -245,7 +239,7 @@
         border: none;
         background-color: transparent; 
         z-index: 2; 
-
+  
         @media screen and (min-width: 768px) {
             display: none;
         }
@@ -265,25 +259,24 @@
     .header-menu__btn:focus {
         fill: var(--accent-text)
     }
-    .header-menu {             
-       text-align: center;
-        font-size: 20px;
-        z-index: 1;
-        display: none;
-        position: absolute;         
+   
+   .header-menu {  
+    
+        text-align: center;
+        font-size: 20px;      
+        display: none;    
+        padding: 48px 40px;      
         top: 0;
-        left: 0;
-        width: 100%; 
-      
-       
+        left: 0;                 
+        
+        &.is-open {
+            display: block; 
+            top: 100%; 
+            left: 100%;        
+            }   
+        }
     }
-    .header-menu.is-open {
-        display: block; 
-        top: 0%; 
-        left: 0%;         
-        }     
- 
-}
+
 
     
 @media screen and (min-width: 768px) {
