--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -2,10 +2,11 @@
 
 .logo {
     display: inline-block;
-    align-items: flex-start;
-
+    opacity: 1;
+    justify-content: flex-start;
     padding-top: 25px;
     padding-bottom: 25px;
+  
   
     color: var(--accent-text);
     font-family: 'Raleway';
