--- a/css/main.css
+++ b/css/main.css
@@ -269,11 +269,12 @@ h1, h2, h3, p {
         left: 0%;    
        }
 }*/
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767.9px) {
   .main-div {
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
     display: inline-flex;
+    position: relative;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -382,13 +383,13 @@ h1, h2, h3, p {
   }
 }
 
-@media screen and (min-width: 480px) and (min-width: 768px) {
+@media screen and (max-width: 767.9px) and (min-width: 768px) {
   .header-menu__btn {
     display: none;
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767.9px) {
   .header-menu__icon-cross {
     display: none;
   }
@@ -410,11 +411,17 @@ h1, h2, h3, p {
     padding: 48px 40px;
     top: 0;
     left: 0;
+    z-index: 1;
   }
   .header-menu.is-open {
     display: block;
-    top: 100%;
-    left: 100%;
+    position: absolute;
+    background-color: #ffff;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100vh;
+    overflow: scroll;
   }
 }
 
@@ -442,11 +449,9 @@ h1, h2, h3, p {
     padding: 0;
     margin: 0;
   }
-  .header-menu__navigation {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
+  /* .header-menu__navigation {
+        display: flex;
+    }*/
   .site-nav {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -566,6 +571,9 @@ h1, h2, h3, p {
   .site-social {
     display: none;
   }
+  .header-menu__btn {
+    display: none;
+  }
   .header-menu.is-open {
     display: none;
   }
@@ -594,11 +602,9 @@ h1, h2, h3, p {
     padding: 0;
     margin: 0;
   }
-  .header-menu__navigation {
-    display: -webkit-box;
-    display: -ms-flexbox;
+  /*.header-menu__navigation {
     display: flex;
-  }
+}*/
   .site-nav {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -641,6 +647,9 @@ h1, h2, h3, p {
   }
   .site-nav__link:hover, .site-nav__link:focus, .site-nav__link--current {
     color: var(--accent-text);
+  }
+  .header-menu__btn {
+    display: none;
   }
   .header-menu__contact {
     display: -webkit-box;
