--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -139,17 +139,14 @@
        }
 }*/
 
-@media screen and (min-width: 480px) {
-    
-
+@media screen and (max-width: 767.9px) {    
     .main-div {       
         display: inline-flex;
-        
+        position: relative;
         align-items: center;
         justify-content: space-around;
         width: 100%;
     }
-
     .site-nav  {
         display: block; 
         margin-bottom: 300px; 
@@ -258,26 +255,28 @@
     .header-menu__btn:hover,
     .header-menu__btn:focus {
         fill: var(--accent-text)
-    }
-   
-   .header-menu {  
-    
+    }   
+   .header-menu {          
         text-align: center;
         font-size: 20px;      
         display: none;    
         padding: 48px 40px;      
         top: 0;
-        left: 0;                 
+        left: 0; 
+        z-index: 1;                
         
         &.is-open {
             display: block; 
-            top: 100%; 
-            left: 100%;        
+            position: absolute;
+            background-color: #ffff;
+            top: 0%; 
+            left: 0%;  
+            width: 100%; 
+            height: 100vh;  
+            overflow: scroll;          
             }   
         }
     }
-
-
     
 @media screen and (min-width: 768px) {
     .main-div {
@@ -286,18 +285,16 @@
         padding: 0;
         width: 768px;
     }
-  
     .header-menu {
         display: flex;
         align-items: center;  
         justify-content: space-between;
         padding: 0;
-        margin: 0;       
-       
-    }
-    .header-menu__navigation {
+        margin: 0;      
+           }
+   /* .header-menu__navigation {
         display: flex;
-    }
+    }*/
     .site-nav {
         display: flex;
         margin-bottom: 0; 
@@ -413,10 +410,12 @@
     .site-social {
         display: none;
     }
+    .header-menu__btn {
+        display: none;
+    }
     .header-menu.is-open {
         display: none;   
     }
-
     }
 
 @media screen and (min-width: 1200px) {
@@ -428,18 +427,16 @@
     padding: 0;
     width: 1200px;
 }
-
 .header-menu {
     display: flex;
     align-items: center;  
     justify-content: space-around;
     padding: 0;
-    margin: 0;       
-   
-}
-.header-menu__navigation {
+    margin: 0;      
+   }
+/*.header-menu__navigation {
     display: flex;
-}
+}*/
 .site-nav {
     display: flex;
     margin-bottom: 0; 
@@ -484,6 +481,9 @@
     &__link--current {
     color: var(--accent-text);   
 }
+}
+.header-menu__btn {
+    display: none;
 }
 .header-menu__contact {
     display: flex;
